[gd_scene load_steps=2 format=3 uid="uid://dogqtpccyue23"]

[ext_resource type="Script" path="res://Scripts/record_highscore.gd" id="1_flmt4"]

[node name="ScorePopup" type="Panel"]
offset_right = 369.0
offset_bottom = 453.0
script = ExtResource("1_flmt4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 367.0
offset_bottom = 456.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 117.0
offset_top = 372.0
offset_right = 239.0
offset_bottom = 418.0
text = "Best√§tigen"

[node name="Title" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 98.0
offset_top = 34.5
offset_right = 277.0
offset_bottom = 57.5
text = "Gib Deinen Namen ein:"

[node name="All_Highscores_label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 174.5
offset_right = 331.0
offset_bottom = 340.5

[node name="LineEdit" type="LineEdit" parent="ColorRect"]
layout_mode = 0
offset_left = 58.0
offset_top = 112.5
offset_right = 311.0
offset_bottom = 143.5

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="ColorRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
